# git-init

./: .env  .gitignore  CLAUDE Instructions for Home Hedge Fund.md  README.md  env.example  harvest_fixtures.py  pyproject.toml  registry_control.xlsx  registry_workbook.py
.claude/: launch.json
adapters/: base.py  capture_all.py  cftc.py  cot_capture.py  estat.py  eurostat.py  fred.py  lme_cotr.py  premium.py  statcan.py
app/: Home.py  __init__.py  controls.py  data_access.py  theme.py  toolkit_ui.py
discovery/: __init__.py  cftc.py  estat.py  eurostat.py  fred.py  lme.py  relevance.py  run.py  stage.py  statcan.py
docs/: backtest_handover.md  cftc_adapter_handover.md  cme_premium_data_options.md  composites_handover.md  decomp_handover.md  estat_adapter_handover.md  eurostat_adapter_handover.md  fred_adapter_handover.md  indicators_handover.md  lme_cotr_adapter_handover.md  nowcast_handover.md  premium_capture_handover.md  project_briefing_2026-07-06.md  quant_data_gaps.md  quant_foundation_handover.md  regimes_handover.md  registry_workbook_handover.md  scanner_handover.md  statcan_adapter_handover.md  streamlit_app_handover.md  third_party.md  tracker_handover.md  workbench_handover.md
jobs/: run_premium_capture.bat  run_weekly_capture.bat  run_workbook_build.bat
models/: __init__.py  evaluate.py  forecast.py  strategy.py
quant/: pit.py  scorecard.py  signal.py  stats.py  store.py  transforms.py
registry/: cftc.yaml  estat.yaml  eurostat.yaml  fred.yaml  lme_cotr.yaml  loader.py  premiums.yaml  schema.py  statcan.yaml
tests/: conftest.py  test_backtest.py  test_cftc_adapter.py  test_composites.py  test_decomp.py  test_decomp_timeseries.py  test_estat_adapter.py  test_eurostat_adapter.py  test_forecast.py  test_fred_adapter.py  test_indicators.py  test_lme_cotr_adapter.py  test_nowcast.py  test_pit.py  test_premium_capture.py  test_regimes.py  test_registry.py  test_registry_workbook.py  test_scanner.py  test_scorecard.py  test_signal.py  test_statcan_adapter.py  test_stats.py  test_store.py  test_strategy.py  test_tracker.py  test_tracker_analytics.py  test_tracker_cli.py  test_tracker_events.py  test_tracker_marking.py  test_tracker_report.py  test_transforms.py
tracker/: __init__.py  analytics.py  calls.py  cli.py  events.py  marking.py  pricing.py  report.py  schema.py  state.py  store.py
(+64 files in other folders)
